--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "psr/simple-cache": "^2.0",
+        "pxlrbt/filament-excel": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
