--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^2.8",
         "laraveldaily/laravel-invoices": "^3.0",
         "psr/simple-cache": "^2.0",
-        "pxlrbt/filament-excel": "^2.1"
+        "pxlrbt/filament-excel": "^2.1",
+        "swisnl/filament-backgrounds": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
